--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <resources>
-    <string name="app_name">Auro</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="app_name">Music</string>
     <string name="action_settings">Settings</string>
     <string name="theme">Theme</string>
     <string name="view">View</string>
-    <string name="settings">Settings</string>
     <string name="home">Home</string>
     <string name="playlist">Playlist</string>
     <string name="songs">Songs</string>
@@ -17,7 +15,6 @@
     <string name="menu_playlist_rename">Rename</string>
     <string name="menu_playlist_play">Play</string>
     <string name="menu_play_next">Play Next</string>
-    <string name="menu_set_mood">Set Mood</string>
     <string name="menu_add_playing">Add to Playing Queue</string>
     <string name="menu_remove_playing">Remove from Playing Queue</string>
     <string name="menu_add_playlist">Add to Playlist</string>
@@ -28,14 +25,8 @@
     <string name="menu_set_ringtone">Set as Ringtone</string>
     <string name="menu_song_editor">Tag Editor</string>
     <string name="nav_playlist">Playlist</string>
-    <string name="nav_home">Home</string>
-    <string name="nav_songs">Songs</string>
-    <string name="nav_albums">Albums</string>
-    <string name="nav_artists">Artists</string>
-    <string name="nav_genres">Genres</string>
     <string name="nav_about">About Us</string>
     <string name="nav_others">Others</string>
-    <string name="nav_settings">Settings</string>
     <string name="pref_general">General</string>
     <string name="pref_theme">Design</string>
     <string name="pref_scan">Scan Files</string>
