Remove settings for now * Add AboutLibs again * I was unhappy with the settings layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,7 @@
     <string name="menu_set_ringtone">Set as Ringtone</string>
     <string name="menu_song_editor">Tag Editor</string>
     <string name="nav_playlist">Playlist</string>
-    <string name="nav_about">About Us</string>
-    <string name="nav_others">Others</string>
+    <string name="about">About</string>
     <string name="pref_general">General</string>
     <string name="pref_theme">Design</string>
     <string name="pref_scan">Scan Files</string>
