--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,7 @@
     <string name="shuffle">Shuffle</string>
     <string name="album_art">Album Art</string>
     <string name="artist_art">Artist Art</string>
+    <string name="artist_fetch_url">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
+    <string name="api">911da172e486f9339ebc82b65ee89993</string>
+    <string name="artist_image">Artist Image</string>
 </resources>
