--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="api">911da172e486f9339ebc82b65ee89993</string>
     <string name="artist_image">Artist Image</string>
     <string name="play_all">Play All</string>
+    <string name="search">Search</string>
 </resources>
