--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Music</string>
     <string name="playlist">Playlist</string>
@@ -26,4 +27,8 @@
     <string name="artist_image">Artist Image</string>
     <string name="play_all">Play All</string>
     <string name="search">Search</string>
+    <string name="view_library_short">Library</string>
+    <string name="view_library_long">View Library</string>
+    <string name="search_library_short">Search</string>
+    <string name="search_library_long">Search Library</string>
 </resources>
