Add dismissive action to playlist dialogue
Not that it's needed, but it's a nice touch for the dialogue to have it.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,9 @@
     <string name="playlist_example">e.g. Favourites</string>
     <string name="playlist_name_empty_warning">Playlist name cannot be empty</string>
 
+    <!-- PlaylistAdapter -->
+    <string name="ok">OK</string>
+
     <!-- PlaylistActivityAdapter -->
     <string name="share_song">Share song</string>
     <string name="song_delete_success">Song deleted</string>
