--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,45 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Music</string>
-    <string name="playlist">Playlist</string>
-    <string name="songs">Songs</string>
-    <string name="album">Albums</string>
-    <string name="artist">Artists</string>
-    <string name="menu_playlist_delete">Delete</string>
-    <string name="menu_playlist_rename">Rename</string>
-    <string name="play">Play</string>
-    <string name="menu_play_next">Play next</string>
-    <string name="menu_add_playing">Add to playing queue</string>
-    <string name="menu_remove_playing">Remove from playing queue</string>
-    <string name="menu_add_playlist">Add to playlist</string>
-    <string name="menu_remove_playlist">Remove from playlist</string>
-    <string name="menu_delete">Delete from device</string>
-    <string name="menu_share">Share</string>
-    <string name="about">About</string>
-    <string name="repeat">Repeat</string>
-    <string name="rewind">Rewind</string>
-    <string name="fast_forward">Fast Forward</string>
-    <string name="shuffle">Shuffle</string>
     <string name="album_art">Album Art</string>
     <string name="artist_fetch_url">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
     <string name="api">911da172e486f9339ebc82b65ee89993</string>
     <string name="artist_image">Artist Image</string>
-    <string name="play_all">Play all</string>
-    <string name="search">Search</string>
+    <string name="default_duration">00:00</string>
+
+    <!-- Navigation -->
+    <string name="playlist">Playlist</string>
+    <string name="songs">Songs</string>
+    <string name="album">Albums</string>
+    <string name="artist">Artists</string>
+    <string name="about">About</string>
+
+    <!-- Shortcuts -->
     <string name="view_library_short">Library</string>
     <string name="view_library_long">View library</string>
-    <string name="search_library_short">Search</string>
     <string name="search_library_long">Search library</string>
+
+    <!-- Actions -->
+    <string name="add">Add</string>
+    <string name="cancel">Cancel</string>
+    <string name="done">Done</string>
+    <string name="play">Play</string>
+    <string name="menu_playlist_delete">Delete</string>
+    <string name="menu_playlist_rename">Rename</string>
     <string name="previous">Previous</string>
     <string name="next">Next</string>
     <string name="menu">Menu</string>
+    <string name="repeat">Repeat</string>
+    <string name="rewind">Rewind</string>
+    <string name="fast_forward">Fast Forward</string>
+    <string name="shuffle">Shuffle</string>
+    <string name="menu_play_next">Play next</string>
+    <string name="menu_add_playing">Add to playing queue</string>
+    <string name="menu_remove_playing">Remove from playing queue</string>
+    <string name="menu_delete">Delete from device</string>
+    <string name="menu_share">Share</string>
+    <string name="play_all">Play all</string>
+    <string name="search">Search</string>
     <string name="add_playlist">Create playlist</string>
-    <string name="default_duration">00:00</string>
 
-    <!-- DialogPlaylistAdapter -->
+    <!-- Playlist strings -->
     <string name="rename_playlist">Rename playlist</string>
     <string name="playlist_example">e.g. Favourites</string>
     <string name="playlist_name_empty_warning">Playlist name cannot be empty</string>
+    <string name="create_new_playlist">Create playlist</string>
+    <string name="add_to_playlist">Add songs to playlist</string>
+    <string name="menu_add_playlist">Add to playlist</string>
+    <string name="menu_remove_playlist">Remove from playlist</string>
 
     <!-- PlaylistAdapter -->
     <string name="ok">OK</string>
@@ -49,15 +59,7 @@
     <string name="song_delete_success">Song deleted</string>
     <string name="song_delete_fail">Failed to delete song</string>
 
-    <!-- PlaylistFragment -->
-    <string name="create_new_playlist">Create new…</string>
-
-    <!-- PlaylistActivity -->
-    <string name="add_to_playlist">Add songs to playlist</string>
-    <string name="add">Add</string>
-    <string name="cancel">Cancel</string>
-
-    <!-- MainActivity -->
+    <!-- About screen -->
     <string name="about_text">Music player based on an older version of @architjn\'s Auro, before everything got broken.</string>
 
     <!-- MusicService -->
@@ -66,7 +68,4 @@
     <string name="file_invalid">File invalid</string>
     <string name="unable_gain_focus">Unable to gain audio focus</string>
 
-    <!-- Utils -->
-    <string name="add_playlist_u">Create playlist…</string>
-    <string name="done">Done</string>
 </resources>
