--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <!-- Navigation -->
     <string name="playlist">Playlist</string>
     <string name="songs">Songs</string>
-    <string name="album">Albums</string>
+    <string name="albums">Albums</string>
     <string name="artist">Artists</string>
     <string name="about">About</string>
 
@@ -67,5 +67,9 @@
     <string name="nothing_to_play">Nothing to play</string>
     <string name="file_invalid">File invalid</string>
     <string name="unable_gain_focus">Unable to gain audio focus</string>
+
+    <!-- List strings -->
+    <string name="album">Album</string>
+    <string name="song">Song</string>
 
 </resources>
