Replace create playlist button with a FAB * The playlist fragment doesnt update when a playlist is created * Apparently the UI wants to inexplicably lag when playback is paused :/ * Add a textview when a fragment is empty * Add song album art to PlayingSongAdapter * Improve shortcuts * Update app icon (probably no noticeable difference)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,8 @@
     <!-- List strings -->
     <string name="album">Album</string>
     <string name="song">Song</string>
+    <string name="no_songs">No songs found!</string>
+    <string name="no_albums">No albums found!</string>
+    <string name="no_artists">No artists found!</string>
 
 </resources>
