--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,6 @@
     <string name="next">Next</string>
     <string name="menu">Menu</string>
     <string name="repeat">Repeat</string>
-    <string name="rewind">Rewind</string>
-    <string name="fast_forward">Fast Forward</string>
     <string name="shuffle">Shuffle</string>
     <string name="menu_play_next">Play next</string>
     <string name="menu_add_playing">Add to playing queue</string>
@@ -49,16 +47,14 @@
     <string name="create_new_playlist">Create playlist</string>
     <string name="add_to_playlist">Add songs to playlist</string>
     <string name="menu_add_playlist">Add to playlist</string>
-    <string name="menu_remove_playlist">Remove from playlist</string>
 
     <!-- PlaylistAdapter -->
     <string name="ok">OK</string>
 
     <!-- About screen -->
-    <string name="about_text">Music player based on an older version of @architjn\'s Auro, before everything got broken.</string>
+    <string name="about_text">A lightweight, fast music player with all the latest features!</string>
 
     <!-- MusicService -->
-    <string name="service_generate_list_warning">The service has not yet built a list of your songs</string>
     <string name="file_invalid">File invalid</string>
     <string name="unable_gain_focus">Unable to gain audio focus</string>
 
@@ -71,10 +67,6 @@
 
     <!-- Settings strings -->
     <string name="appearance">Appearance</string>
-    <string name="lock_screen">Lock Screen</string>
-    <string name="advanced">Advanced</string>
-    <string name="reset_app">Reset app data</string>
-    <string name="reset_app_summary">Reset app data, equivalent to clear data from device settings</string>
     <string name="lock_screen_art">Album art on lock screen</string>
     <string name="lock_screen_art_summary">Choose whether or not album art is shown on the lock screen</string>
     <string name="dark_mode">Dark theme</string>
