Use SeekbarPreference for playback speed changing * Try to fix AudioFocus * Use .prepareAsync for MediaPlayer * Bring back the Play ALl function * Optimise volume button code * Fix more crashing * Remove firebase (Google Play does install count better)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,6 +72,7 @@
     <string name="dark_mode">Dark theme</string>
     <string name="dark_mode_enabled">Dark theme enabled</string>
     <string name="dark_mode_disabled">Dark theme disabled</string>
+    <string name="playback_speed">Playback speed</string>
 
     <string-array name="playback_speed">
         <item>0.5x</item>
