--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Music</string>
+    <string name="app_name">Mnml Player</string>
     <string name="album_art">Album Art</string>
     <string name="artist_fetch_url" translatable="false">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
     <string name="api" translatable="false">911da172e486f9339ebc82b65ee89993</string>
@@ -52,7 +52,7 @@
     <string name="ok">OK</string>
 
     <!-- About screen -->
-    <string name="about_text">A lightweight, fast music player with all the latest features!</string>
+    <string name="app_desc">A lightweight, fast music player with all the latest features!</string>
 
     <!-- MusicService -->
     <string name="file_invalid">File invalid</string>
