--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,6 +48,7 @@
     <string name="ok">OK</string>
 
     <!-- About screen -->
+    <string name="app_desc">A fast, lightweight music player with all the latest features!</string>
 
     <!-- MusicService -->
     <string name="file_invalid">File invalid</string>
