Start working on bringing back search * We are using a modified version of https://github.com/MiguelCatalan/MaterialSearchView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,5 +71,6 @@
     <string name="playback_speed">Playback speed</string>
     <string name="primary_color">Primary color</string>
     <string name="accent_color">Accent color</string>
+    <string name="search">Search</string>
 
 </resources>
