--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Mnml Player</string>
-    <string name="artist_fetch_url" translatable="false">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
+    <string name="artist_fetch_url" translatable="false">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo
+    </string>
     <string name="api" translatable="false">493fc564e6533635edcc4e0f371bf1da</string>
     <string name="artist_image">Artist Image</string>
 
